melhora configurações para tirar mais extenções, erro no contado e php

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,14 @@
 ErrorDocument 404 /404.shtml
 RewriteEngine On
-RewriteCond %{HTTP} off
-RewriteRule ^(.*)$ http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-RewriteRule ^([0-9A-Za-z-_]+)$ /$1.html
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+<IfModule mod_rewrite.c>
+    Options +FollowSymLinks -MultiViews
+    RewriteEngine On
+    RewriteBase /
+    RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
+    RewriteRule ^ %1 [R,L]
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.html -f
+    RewriteRule ^(.*?)/?$ $1.html [L]
+</IfModule>
