--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
-# RewriteEngine On
-# RewriteCond %{HTTPS} off
+RewriteEngine On
+#RewriteCond %{HTTPS} off
 # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 # <IfModule mod_rewrite.c>
 #     Options +FollowSymLinks -MultiViews
 #     RewriteEngine On
@@ -11,9 +12,45 @@
 #     RewriteCond %{REQUEST_FILENAME}.html -f
 #     RewriteRule ^(.*?)/?$ $1.html [L]
 # </IfModule>
-Options -Indexes
-ErrorDocument 403 /erros/403.shtml
-ErrorDocument 404 /erros/404.shtml
 
-RewriteEngine On
+Options -Indexes
+ErrorDocument 403 https://%{HTTP_HOST}/erros/403.shtml
+ErrorDocument 404 https://%{HTTP_HOST}/erros/404.shtml
 RewriteRule ^home$ ./index.html [NC]
+# RewriteRule /index$ / [NC]
+
+RewriteBase /
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
+RewriteRule ^ %1 [R,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.*?)/?$ $1.html [L]
+
+RewriteBase /
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
+RewriteRule ^ %1 [R,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.*?)/?$ $1.php [L]
+
+RewriteBase /
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.shtml [NC]
+RewriteRule ^ %1 [R,L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.shtml -f
+RewriteRule ^(.*?)/?$ $1.shtml [L]
+
+# <FilesMatch ".+\.(js|css)$">
+# #     Deny from all
+#     <Limit POST>
+#         Deny from all
+#     </Limit>
+# </FilesMatch>
+
+# RewriteBase /
+# RewriteCond %{REQUEST_FILENAME} "\.js"
+# RewriteRule .* index.html
+
+
+# ErrorDocument 500 /erros/404.shtml
+# RewriteRule ^(.*?)$ ./index.html
