--- a/.htaccess
+++ b/.htaccess
@@ -1,45 +1,33 @@
-RewriteEngine On
-#RewriteCond %{HTTPS} off
-# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-# <IfModule mod_rewrite.c>
-#     Options +FollowSymLinks -MultiViews
-#     RewriteEngine On
-#     RewriteBase /
-#     RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
-#     RewriteRule ^ %1 [R,L]
-#     RewriteCond %{REQUEST_FILENAME} !-d
-#     RewriteCond %{REQUEST_FILENAME}.html -f
-#     RewriteRule ^(.*?)/?$ $1.html [L]
-# </IfModule>
-
+#Bloqueia acesso à pastas sem index
 Options -Indexes
-ErrorDocument 403 https://%{HTTP_HOST}/erro/403.shtml
-ErrorDocument 404 https://%{HTTP_HOST}/erro/404.shtml
-RewriteRule ^home$ ./index.html [NC]
-# RewriteRule /index$ / [NC]
 
-RewriteBase /
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
-RewriteRule ^ %1 [R,L]
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.*?)/?$ $1.html [L]
+#Redireciona caso ocorra os sequintes erros
+ErrorDocument 403 https://%{HTTP_HOST}/erro/403
+ErrorDocument 404 https://%{HTTP_HOST}/erro/404
 
-RewriteBase /
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
-RewriteRule ^ %1 [R,L]
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.*?)/?$ $1.php [L]
+<IfModule mod_rewrite.c>
+    # Options +FollowSymLinks -MultiViews
+    RewriteEngine On
 
-RewriteBase /
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.shtml [NC]
-RewriteRule ^ %1 [R,L]
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.shtml -f
-RewriteRule ^(.*?)/?$ $1.shtml [L]
+    #Troca o protocolo de http para https
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    RewriteRule ^home$ ./index.html [NC]
 
+    #Remove a extenção da url sem precisar mexer no código
+    RewriteBase /
+    RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html|php|shtml [NC]
+    RewriteRule ^ %1 [R,L]
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}\.html|php|shtml -f
+    RewriteRule ^(.*?)\/?$ $1\.html|php|shtml [L]
+</IfModule>
+
+
+
+
+
+#TESTES
 # <FilesMatch ".+\.(js|css)$">
 # #     Deny from all
 #     <Limit POST>
@@ -50,7 +38,6 @@ RewriteRule ^(.*?)/?$ $1.shtml [L]
 # RewriteBase /
 # RewriteCond %{REQUEST_FILENAME} "\.js"
 # RewriteRule .* index.html
-
 
 # ErrorDocument 500 /erros/404.shtml
 # RewriteRule ^(.*?)$ ./index.html
