--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ ErrorDocument 403 https://%{HTTP_HOST}/erro/403
 ErrorDocument 404 https://%{HTTP_HOST}/erro/404
 
 <IfModule mod_rewrite.c>
-    # Options +FollowSymLinks -MultiViews
+    #Options +FollowSymLinks -MultiViews
     RewriteEngine On
 
     #Troca o protocolo de http para https
@@ -16,11 +16,25 @@ ErrorDocument 404 https://%{HTTP_HOST}/erro/404
 
     #Remove a extenção da url sem precisar mexer no código
     RewriteBase /
-    RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html|php|shtml [NC]
+    RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
     RewriteRule ^ %1 [R,L]
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME}\.html|php|shtml -f
-    RewriteRule ^(.*?)\/?$ $1\.html|php|shtml [L]
+    RewriteCond %{REQUEST_FILENAME}.html -f
+    RewriteRule ^(.*?)/?$ $1.html [L]
+
+    RewriteBase /
+    RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
+    RewriteRule ^ %1 [R,L]
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.php -f
+    RewriteRule ^(.*?)/?$ $1.php [L]
+
+    RewriteBase /
+    RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.shtml [NC]
+    RewriteRule ^ %1 [R,L]
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.shtml -f
+    RewriteRule ^(.*?)/?$ $1.shtml [L]
 </IfModule>
 
 
