adicionando conexão remota (ainda em processo) com o hostgator e páginas de produtos editadas

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       main
-name: Deploy com push na main
+name: deploy - push na main
 jobs:
   web-deploy:
     name: Deploy
