--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.3.2
       with:
         server: ${{ secrets.ftp_host }}
-        username: ${{ secrets.ftp_password }}
+        username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
 #         teste
